# g1_solver

./: README.md  package.xml  setup.cfg  setup.py
config/: g1_plugins.yaml  solver_config.yaml
description/: g1.srdf  g1.urdf
launch/: g1_solver.launch.py  mock_joint_states.launch.py
src/: main.py  publish_joint_states.py  solver_ros.py
tesseract_py/: check_lib.py  check_lib2.py  diagnose.py  diagnose2.py  diagnose3.py  diagnose4.py  tesseract_kinematics_example.py  tesseract_planning_example_composer.py  test.py  vis.py
tesseract_py/g1_solver_ros2/: joint_table_target.py  main.py  open_question.txt  publish_joint_states.py  solver_config.yaml  solver_ros.py
tesseract_py/resource/: g1.srdf  g1.urdf
